--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
 <!--------------------------------------------------------------------------------------->
 <header class="header">
     <nav class="nav">
-        <img class="logo__img" src="./img/Logo.png" ALT="Logo Gestion deposito">
+        <img class="logo__img" src="../img/Logo.png" ALT="Logo Gestion deposito">
         <h1 class="web">Gestion Deposito (ISPCA3G5)</h1>
         <h1 class="mov">Gestion Deposito</h1> 
         <button class="nav-toggle" id="nav-toggle" onclick="mi_Menu()">
