--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
 <!--------------------------------------------------------------------------------------->
 <header class="header">
     <nav class="nav">
-        <img class="logo__img" src="./img/Logo.png" ALT="Logo Gestion deposito">
+        <img class="logo__img" src="../img/logo.png" ALT="Logo Gestion deposito">
         <h1 class="web">Gestion Deposito (ISPCA3G5)</h1>
         <h1 class="mov">Gestion Deposito</h1> 
         <button class="nav-toggle" id="nav-toggle" onclick="mi_Menu()">
@@ -128,7 +128,7 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
           <!--------------------------------------------------------------------------------------->
           <div class="box__footer">
               <div class="logo">
-                  <img src="./img/Logo.png" alt="aca va al logo">
+                  <img src="./img/logo.png" alt="aca va al logo">
               </div>
               <div class="terms">
                   <p>Todo nuestro personal está altamente calificado y trabaja en un excelente entorno. 
