--- a/abm.html
+++ b/abm.html
@@ -77,8 +77,9 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
 
 
 
-
+    <form>
     <div class="contiene_alta alta">
+        
         <div class="codigo_input">
             <label for="codigo" class="label_codigo">Codigo</label>
             <input type="text"  name="Codigo" class="codigo" id="codigo">
@@ -92,6 +93,7 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
             <label for="nombre" class="label_nombre">Nombre</label>
             <input type="text"  name="Nombre" class="nombre" id="nombre">
         </div>
+        <!--
         <div class="marca_input">
             <label for="marca" class="label_marca">Marca</label>
             <input type="text"  name="Marca" class="marca" id="marca">
@@ -111,7 +113,8 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
         <div class="precto_input">
             <label for="precto" class="label_precto">Precio de Costo</label>
             <input type="text"  name="Precio de Costo" class="precto" id="precto">
-        </div> 
+        </div> -->
+        </form>
 
 
 
@@ -121,12 +124,15 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
 
 
 
-
+        <form>
     <div class="contiene_modi">
     </div>
+        </form>
+
+        <form>
     <div class="contiene_baja">
     </div>
-
+        </form>
 
 
 
