--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
          </div>
     </div>
 </div>
+<br>
 <!--------------------------------------------------------------------------------------->
-<section id="sostenibilidad" class="seccion">
+<section id="sostenibilidad" class="seccion wrap2">
     <div class="container">
         <div class="row">
             <div class="col-lg-8  columna-presentacion  ">
@@ -230,7 +231,7 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
             </div>
             <div class="col-lg-4 columna-contenido   wow fadeIn">
                 <img src="./img/icono_sostenibilidad.svg">
-                <h2>FRANQUICIAS</h2>
+                <h3>FRANQUICIAS</h3>
                 <p>"consiste en un modelo de negocio en el que una persona física o jurídica otorga el derecho a un tercero de utilizar su marca y trabajar bajo su mismo sistema comercial.".</p>
                 <a href="./pdf/sostenibilidad.pdf" target="_blank"  class="btn-descarga btn-verde">
                     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 49.716 54.392">
