--- a/abm.html
+++ b/abm.html
@@ -120,12 +120,12 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
         </div>
         
         <div class="prevta_input">
-            <label for="prevta" class="label_prevta">Precio de Venta</label>
+            <label for="prevta" class="label_prevta">Venta</label>
             <input type="text"  name="Precio de Venta" class="prevta" id="prevta">
         </div>
         
         <div class="precto_input">
-            <label for="precto" class="label_precto">Precio de Costo</label>
+            <label for="precto" class="label_precto">Costo</label>
             <input type="text"  name="Precio de Costo" class="precto" id="precto">
         </div> 
 
