--- a/producto.html
+++ b/producto.html
@@ -37,6 +37,8 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
             <li class="nav-menu-item"><a  href="login.html" class="nav-menu-link nav-link">Login</a></li> 
             <li class="nav-menu-item"><a  href="registro.html" class="nav-menu-link nav-link">Registro</a></li>              
             <li class="nav-menu-item"><a  href="contacto.html" class="nav-menu-link nav-link">Contacto</a></li>
+            <li class="nav-menu-item"><a  href="quienessomos.html" class="nav-menu-link nav-link">ABM</a></li>
+            
         </ul>
     </nav>
     </header>
@@ -46,11 +48,13 @@ integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="ano
     <!--------------------------------------------------------------------------------------->
     <div class="wrap">
         <h1>Nuestros productos</h1> <!--titulo-->
+        
         <button class="nav-toggle2" id="nav-toggle2" onclick="mi_Menu2()"><!--boton para abrir el menu-->
             <i class="fas fa-bars" aria-hidden="true"></i><!--boton de menu-->
         </button>
         <div class="store-wrapper"><!--contenedor de la tabla-->
             <div class="category_list"><!--contenedor de la lista-->
+                <!--<a href="#" class="category_item button_vs" onclick="abm()" id= "a">ABM</a>-->
                 <a href="#" class="category_item button_vs" onclick="todo()" id="a">Todo</a>
                 <a href="#" class="category_item button_vs" onclick="leds()" id="b">Leds</a>
                 <a href="#" class="category_item button_vs" onclick="disp()" id="c">Display</a>
